sass/theme/_theme.scss
// This is an empty scss file for your custom styles - Please add your super duper awesome mega design styles here

body {
	font-family: Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
	background-color: #f1f1f1;
}

h1, h2, h3 {
	color: rgba(0,0,0,0.87);
    font-size: 2em;
    font-weight: 400;
    margin: 16px;
    line-height: 28px;
    margin-left: 0;
    padding-left: 0;
}


.card {
	border-radius: 0;
	-webkit-box-shadow: 0 1px 4px 0 rgba(0,0,0,0.14);
    box-shadow: 0 1px 4px 0 rgba(0,0,0,0.14);
    z-index: 1;
    border: none;
    padding-bottom: 20px;
}

.navbar {
	color: #676767;
	-webkit-box-shadow: 0 1px 8px rgba(0,0,0,.3);
    box-shadow: 0 1px 8px rgba(0,0,0,.3);
    background-color: #fff;
    font-weight: 500;
    overflow: hidden;
    text-overflow: ellipsis;
}

.navbar-light .navbar-brand, .navbar-light .navbar-brand a {
	color: #676767;
}

.whats-new {
	display: inline-block;
	color: #424242;
}

#write {
	border: none;
	background-color: #fff;
}

.plus h2 {
	color: rgba(0,0,0,0.87);
    font-size: 20px;
    font-weight: 300;
    margin: 16px;
    line-height: 28px;
    overflow: hidden;
    text-overflow: ellipsis;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2;
    display: -webkit-box;
    max-height: 56px;
    margin-left: 0;
    padding-left: 20px;
}

ul#plus-home-list{
	list-style-type: none;
	width: 200px;
	margin: 0;
	padding: 0;
	position: fixed;
}

#plus-home-list li {
	padding: 10px 15px;
	list-style-type: none;
	display: block;	
}

#plus-home-list li:hover {
	background-color: #e7e7e7;
}

#plus-home-list li a {
	display: block;
	width: 100%;
	height: auto;
	vertical-align: middle;
	line-height: 30px;
}


#plus-home-list i {
	margin-right: 20px;
	font-size: 1.4em;
}

.plus h2:after {
	content: '';
	border-bottom: 1px solid #ebebeb;
	width: 90%;
    margin: 16px auto;
    display: block;
}

.card .card-text {
	font-size: 14px;
    line-height: 20px;
    padding: 10px 20px;    
}

.plus-author {
	color: rgba(0,0,0,0.87);
    font-size: 14px;
    text-decoration: none;
    text-overflow: ellipsis;
    overflow: hidden;
    display: block;
    -webkit-box-flex: auto;
    -webkit-flex: auto;
    flex: auto;
    padding: 20px 20px 10px 20px;
}

.plus-photo {
	object-fit: cover;
	width: 100%;
}

.plus-author-photo {
	width: 36px;
	height: 36px;
	border-radius: 50%;
	margin-right: 10px;
}

.plus-author-name {
	display: inline-block;
	vertical-align: top;
}

.plus-logged {
	height: 24px;
	width: 24px;
	border-radius: 50%;
	margin-right: 10px;
	margin-left: 20px;
}

.plus-comment-box {
	font-size: .8em;
	color: rgba(0,0,0,.6);
}

.comment-count {
	padding-left: 20px;
	font-size: .8em;
	color: rgba(0,0,0,.6);
	margin-bottom: 8px;
}

//modal editor
.modal-content {
	border-radius: 0;
}

#closer {
	color: rgba(0,0,0,0.87);
    font-weight: 500;
    line-height: 20px;
    font-size: 14px;
    cursor: pointer;
    position: absolute;
    right: 140px;
    bottom: 20px;
    text-transform: uppercase;
}

#gform_submit_button_1 {
	color: #fff;
    font-weight: 500;
    line-height: 20px;
    font-size: 14px;
    cursor: pointer;
	position: absolute;
	right: 25px;
	bottom: 13px;
	background-color: #4285f4;	
	border: none;
	text-transform: uppercase;
	padding: 7px 10px;
	border-radius: 6px;
}


//single post 
#single-wrapper .site-main {
	max-width: 600px;
	display: block;
	margin: 0 auto;
	background-color: #fff;
	-webkit-box-shadow: 0 1px 4px 0 rgba(0,0,0,0.14);
    box-shadow: 0 1px 4px 0 rgba(0,0,0,0.14);
    z-index: 1;
    border: none;
    padding-bottom: 20px;
    padding-top: 20px;
}

#single-wrapper .entry-title {
	padding-left: 20px;
	font-size: 24px;
    line-height: 24px;
    color: #000;
    margin-top: 8px;

}

#single-wrapper .entry-content p {
	padding: 20px;
}

#plus-post .modal-body {
	padding-bottom: 40px;
}

@media (min-width: 768px) {  
  .card-columns {column-count: 2;}
}

/* Large devices (desktops, 992px and up) */
@media (min-width: 992px) { 
 .card-columns {column-count: 2;}
}
 
/* Extra large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {  
   .card-columns {column-count: 3;} 
}

/* Extra large devices (large desktops, 1200px and up) */
@media (min-width: 2200px) {  
   .card-columns {column-count: 4;} 
}

